--- a/coronavirus-tracker/pom.xml
+++ b/coronavirus-tracker/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.2.5.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>io.javabrains</groupId>
+	<groupId>coronavirus-tracker</groupId>
 	<artifactId>coronavirus-tracker</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>coronavirus-tracker</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Spring and Bootstrap web app</description>
 
 	<properties>
 		<java.version>15</java.version>
